--- a/OreOre-V-CMake-JIT/mainwindow.ui
+++ b/OreOre-V-CMake-JIT/mainwindow.ui
@@ -606,6 +606,13 @@
         <item>
          <widget class="QTextBrowser" name="statsTextBrowser"/>
         </item>
+        <item>
+         <widget class="QPushButton" name="exportCSVButton">
+          <property name="text">
+           <string>Export to CSV</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
