--- a/OreOre-V-CMake-JIT/mainwindow.ui
+++ b/OreOre-V-CMake-JIT/mainwindow.ui
@@ -275,7 +275,14 @@
           <item>
            <widget class="QPushButton" name="pushButton_7">
             <property name="text">
-             <string>123.456...</string>
+             <string>123</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="floatButton">
+            <property name="text">
+             <string>0.456</string>
             </property>
            </widget>
           </item>
